--- a/harbour-sailtube-open-url.desktop
+++ b/harbour-sailtube-open-url.desktop
@@ -4,9 +4,9 @@ Icon=harbour-sailtube
 Name=SailTube
 
 MimeType=x-scheme-handler/http;x-scheme-handler/https;
-X-Maemo-Service=cz.kuba77.harbour-sailtube
-X-Maemo-Object-Path=/cz/kuba77/harbour-sailtube
-X-Maemo-Method=cz.kuba77.harbour-sailtube.openUrl
+X-Maemo-Service=cz.kuba77.SailTube
+X-Maemo-Object-Path=/cz/kuba77/SailTube
+X-Maemo-Method=cz.kuba77.SailTube.openUrl
 
 NotShowIn=X-MeeGo;
 Hidden=true
